[package]
name = "super"
version = "0.1.3"
authors = ["David Flemström <dflemstr@spotify.com>"]

[dev-dependencies]
serde_json = "0.6.0"

[dependencies]
clap = "1.5.5"
serde = "0.6.11"
serde_macros = "0.6.11"
time = "0.1.34"

[dependencies.toml]
default-features = false
features = ["serde"]
version = "0.1.26"

[profile.release]
lto = true
